# wildpose_v1.3

./: README.md  gnm.xicamera
install/: local_setup.sh  setup.ps1  setup.sh
install/dji_rs3_pkg/share/dji_rs3_pkg/: package.sh
install/gamepad_pkg/share/gamepad_pkg/: package.ps1  package.sh  package.xml
install/lidar_control_package/share/lidar_control_package/: package.bash  package.dsv  package.sh  package.zsh
install/livox_interfaces/share/livox_interfaces/: local_setup.sh  package.sh
install/livox_ros2_driver/lib/livox_ros2_driver/: livox_ros2_driver_node
log/: latest_build
setup_scripts/: ros2_foxy.sh  ros2_humble.sh  xiapi.sh
wildpose/: .gitignore  nvfancontrol.conf  player_tmux.sh  run.sh  tmux.sh  wildpose_gui.py
wildpose/analog_video/TVout/: TVout.cpp  TVout.h  font_set.h  keywords.txt  video_gen.cpp  video_gen.h
wildpose/analog_video/analog_video/: analog_video.ino
wildpose/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
wildpose/install/lidar_control_package/share/lidar_control_package/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
wildpose/install/wildpose_bringup/share/wildpose_bringup/: package.bash  package.ps1  package.sh  package.xml  package.zsh
wildpose/install/wildpose_bringup/share/wildpose_bringup/launch/: gamepad.launch.py  lens.launch.py  lidar.launch.py  motor_position_gui.py  wildpose_launch.py  ximea.launch.py
wildpose/lens_motor_controller/: lens_motor_controller.ino  lens_motor_controller2.ino
wildpose/log/: latest_build
wildpose/src/: rosbag2video.py
wildpose/src/dji_rs3_pkg/: README.md  enable_CAN.sh  package.xml  setup.cfg  setup.py
wildpose/src/gamepad_pkg/: setup.cfg  setup.py
wildpose/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
wildpose/src/iris_controller/: CMakeLists.txt  apperture.py  brightness2_data.csv  brightness2_data.ods  brightness_data.csv  combined_data.csv  comnibe.py  ds.cpp  gnm.py  gnm2.py  gnm3.py  gnm4.py  gnm_ap.py  gnm_bag.py  iris_controller.py  position2_data.csv  v_x.py
wildpose/src/lidar_control_package/: setup.cfg  setup.py
wildpose/src/log/: latest_build
wildpose/src/motor_controller_pkg/: setup.cfg  setup.py
wildpose/src/wildpose_bringup/: CMakeLists.txt
wildpose/src/wildpose_interfaces/: CMakeLists.txt  package.xml
(+192 files in other folders)
