<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_control_package</name>
  <version>0.0.0</version>
  <description>ROS 2 package for controlling LiDAR with joystick input</description>
  <maintainer email="mswger001@myuct.ac.za">Gerald</maintainer>
  <license>Apache License 2.0</license>

  <!-- Add dependencies -->
  <depend>rclcpp</depend>  <!-- Dependency for ROS 2 C++ client library -->
  <depend>wildpose_interfaces</depend>
  <depend>sensor_msgs</depend>  <!-- Dependency for ROS 2 sensor messages -->
  <depend>openpylivox</depend>  <!-- Dependency for LiDAR library -->

  <!-- Add test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
