<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wildpose_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sh.mn.nat@gmail.com">naoya</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ximea_ros2_cam</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>livox_ros2_driver</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joy_linux</exec_depend>
  <exec_depend>motor_controller_pkg</exec_depend>
  <exec_depend>dji_rs3_pkg</exec_depend>
  <exec_depend>rosbag2</exec_depend>
    <exec_depend>lidar_control_package</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
